--- a/events.html
+++ b/events.html
@@ -9,6 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/766126e5c8.js" crossorigin="anonymous"></script>
 
 </head>
@@ -104,7 +105,7 @@
             </div>
             <div class="solo_dance1">
                 <h1 class="title">Solo dance</h1>
-                <p class="para">Are you up to take the beat and dance your way to top, here is your chance to show your moves to the wholw world and win prizes worth</p>
+                <p class="para">Are you up to take the beat and dance your way to top, here is your chance to show your moves to the whole world and win prizes worth</p>
                 <h2 class="prize">15K</h2>
                 <div class="register"><h2><a href="">Register</a></h2></div>
             </div>
