--- a/events.html
+++ b/events.html
@@ -164,7 +164,7 @@
             <div class="persona">
                 <div class="persona1">
                     <h1 class="title">Persona</h1>
-                    <p class="para">To define what it means to be international, is one who can be entitles through person. Entertaining in finding the shows greatest handler is persona. Here is the opportunity to prove your talent and win prizes worth</p>
+                    <p class="para">To define what it means to be international, is one who can be entitles through person. Here is the opportunity to prove your talent and win prizes worth</p>
                     <h2 class="prize">40K</h2>
                     <div class="register"><h2><a href="">Register</a></h2></div>
                 </div>
